--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,9 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <properties>
+        <umlGraph.path>C:\UMLGraph-5.7_2.3-SNAPSHOT</umlGraph.path>
+    </properties>
 
     <groupId>groupId</groupId>
     <artifactId>ExternalSorting</artifactId>
@@ -33,6 +36,27 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
+                <configuration>
+                    <aggregate>true</aggregate>
+                    <show>private</show>
+                    <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
+                    <docletArtifact>
+                        <groupId>org.umlgraph</groupId>
+                        <artifactId>doclet</artifactId>
+                        <version>5.1</version>
+                    </docletArtifact>
+                    <additionalparam>
+                        -inferrel -attributes -types -visibility -inferdep -quiet -hide java.* -collpackages java.util.*
+                        -qualify -postfixpackage
+                        -nodefontsize 9
+                        -nodefontpackagesize 7
+                    </additionalparam>
                 </configuration>
             </plugin>
         </plugins>
