--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <groupId>groupId</groupId>
     <artifactId>ExternalSorting</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <repositories>
+        <repository>
+            <id>janos</id>
+            <name>Maven repo of Janos</name>
+            <url>http://maven.janosgyerik.com/</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -25,6 +32,17 @@
             <groupId>jgoodies</groupId>
             <artifactId>forms</artifactId>
             <version>1.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.janosgyerik</groupId>
+            <artifactId>microbench</artifactId>
+            <version>1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.janosgyerik</groupId>
+            <artifactId>microbench</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
