--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>${jmh.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.charts4j</groupId>
+            <artifactId>charts4j</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
