--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.googlecode.charts4j</groupId>
-            <artifactId>charts4j</artifactId>
-            <version>1.3</version>
+            <groupId>org.knowm.xchart</groupId>
+            <artifactId>xchart</artifactId>
+            <version>2.6.1</version>
         </dependency>
     </dependencies>
     <build>
