--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <properties>
         <umlGraph.path>C:\UMLGraph-5.7_2.3-SNAPSHOT</umlGraph.path>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jmh.version>1.11.3</jmh.version>
         <javac.target>1.6</javac.target>
         <uberjar.name>benchmarks</uberjar.name>
     </properties>
 
-    <groupId>groupId</groupId>
+    <groupId>pl.edu.wat.student.bokun.witold</groupId>
     <artifactId>ExternalSorting</artifactId>
     <version>1.0-SNAPSHOT</version>
 
